--- a/package.json
+++ b/package.json
@@ -4,22 +4,34 @@
   "description": "API For my project",
   "main": "server.js",
   "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "^package-name$": "/node_modules/nanoid"
+    }
+  },
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "npm install && echo 'Build successful'",
-    "test": "nyc --reporter=html --reporter=text mocha --require @babel/register src/tests/*.test.js --timeout 60000 --exit",
-    "test-with-coverage": "nyc mocha --timeout 30000"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=100000",
+    "dev": "nodemon --exec babel-node src/server.js"
   },
   "author": "Terence Faid JABO",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "@babel/cli": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.21.0",
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -29,6 +41,9 @@
   },
   "devDependencies": {
     "@babel/register": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
     "jest": "^29.5.0",
     "mocha": "^10.2.0",
     "morgan": "^1.10.0",
