--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "cross-env NODE_ENV=test jest --testTimeout=100000",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "build": "npm install && echo 'Build successful'"
   },
   "author": "Terence Faid JABO",
   "license": "ISC",
