--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,41 +1,40 @@
-name: integration
+    name: Node.js CI/CD Pipeline
+
 on:
-  pull_request:
   push:
-    branches:
-      - ft-capstone-apis
+    branches: [ develop ]
+  pull_request:
+    branches: [ develop ]
+      
 jobs:
   build:
+    name: build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
-  unit-tests:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+      - name: Install Dependencies
+        run: npm install
+
+  test:
+    name: run-unit test
     runs-on: ubuntu-latest
     env:
-      PORT: ${{secrets.PORT}}
-      HOST: ${{secrets.HOST}}
-      MONGODB_URL: ${{secrets.MONGODB_URL}}
-      SECRET: ${{secrets.SECRET}}
-      NODE_ENV: ${{secrets.NODE_ENV}}
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      SECRET: ${{ secrets.SECRET }}
+      PORT: ${{ secrets.PORT }}
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
-    - run: npm run test
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - name: Install Dependencies
+        run: npm install
+      - name: Run tests
+        run: cross-env NODE_ENV=test jest --testTimeout=100000
