--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/cli": "^7.21.0",
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
     "bcrypt": "^5.1.0",
     "body-parse": "^0.1.0",
     "body-parser": "^1.20.2",
